src/css/index.scss
/* ... */
#compare-wrapper {
  position: relative;
  height: $mapHeight !important;
  width: $mapWidth+12;

  @media only screen and (max-width: 992px) {
    width: $mapMediumWidth+12;
  }

  @media only screen and (max-width: 768px) {
    height: $mapSmallHeight !important;
    width: $mapFullWidth;
  }

}

.start-step1, .start-step2 {
  height: auto;
  padding-right: $default-padding;
  @include border-radius($default-radius, $default-radius);
}

.steps {
  padding-top: 0px !important;
}

.sus-odd {
  background-color: $body-background-daker-color;
  color: $body-darker-color;
}

.sus-odd, .sus-even {
  @include border-radius($default-radius/2, $default-radius/2);
}

.page-title {
  font-size: 24px;
  font-weight: 700;
  @media only screen and (max-width: 768px) {
    font-size: 20px;
  }
  @media only screen and (max-width: 321px) {
    font-size: 18px;
  }
  &.disabled {
    color: darken($body-color, 20) !important;
  }
}

.step-title {
  font-size: 20px;
  font-weight: 700;
  @media only screen and (max-width: 768px) {
    font-size: 18px;
  }
  @media only screen and (max-width: 321px) {
    font-size: 18px;
  }
  &.disabled {
    color: darken($body-color, 20) !important;
  }
}

.step-directions {
  font-size: 16px;
  font-weight: 500;

  @media only screen and (max-width: 768px) {
    font-size: 14px;
  }

  &.disabled {
    color: darken($body-color, 20) !important;
  }
}

.step-not-vis {
  @media only screen and (max-width: 768px) {
    display: none !important;
    visibility: hidden !important;
  }
}

.step-button {
  @media only screen and (max-width: 768px) {
    display: flex;
    justify-content: space-between;
  }
}

.step-button {
  @media only screen and (max-width: 768px) {
    display: flex;
    justify-content: center !important;
    button {
      width: 60% !important;
      @media only screen and (max-width: 420px) {
        width: 100% !important;
      }
    }
  }
}

.step-nav {
  display: none !important;
  cursor: pointer;
  @media only screen and (max-width: 768px) {
    display: flex !important;
    justify-content: space-around;
    padding-bottom: 12px !important;
    color: darken($body-color, 25) !important;
    .active {
      font-weight: 800 !important;
      border-bottom: 2px solid $body-color;
      color: $body-color !important;

    }
  }
}

.step-title-nav {
  display: none !important;
  @media only screen and (max-width: 768px) {
    display: flex !important;
    font-size: 22px;
    @media only screen and (max-height: 376px) {
      font-size: 18px;
    }
    padding-left: 6px !important;
    padding-right: 6px !important;
    align-self: center !important;
    justify-content: center !important;
    width: 33.3% !important;
    height: 100% !important;
  }
}

#circle-button2 {
  display: none !important;
  background-color: lighten($body-background-color, 12) !important;
  border-color: lighten($body-background-color, 12) !important;
  color: $body-color !important;
  @media only screen and (max-width: 768px) {
    display: block !important;
    text-align: center !important;
  }
}

#submit-button-to-sus {
  font-weight: 700 !important;
  text-align: center !important;
}

#submit-button-to-end {
  width: 90% !important;
  text-align: center !important;
}

#submit-button-to-sus, #circle-button2 {
  width: 45% !important;
  @media only screen and (max-width: 768px) {
    width: 100% !important;
    padding-left: 6px !important;
    padding-right: 6px !important;
  }
}

.step-minor-directions {
  padding-top: 12px;
  font-size: 14px;
  font-weight: 200;
  @media only screen and (max-width: 768px) {
    padding-top: 6px;
    padding-bottom: 0.25rem !important;
    font-size: 12px;
    @media only screen and (max-height: 376px) {
      display: none !important;
    }
  }
  &.disabled {
    color: darken($body-color, 20) !important;
  }
}

.minor-text {
  @media only screen and (max-width: 768px) {
    @media only screen and (max-height: 376px) {
      display: none !important;
    }
  }
}

#study-agreement {
  overflow-y: auto !important;
}

::-webkit-scrollbar {
  width: 6px;
  border: 1px solid $body-color;
  background-color: $body-background-color;
}

::-webkit-scrollbar-thumb {
  background-color: darken($body-color, 40);
  border-radius: 8px;
  -webkit-border-radius: 6px !important;
  -moz-border-radius: 6px !important;
  &:vertical {
    height: 8px;
  }
}

::-webkit-scrollbar-track {
  border: 1px solid $body-color;
  background-color: $body-background-color;
}

::-webkit-scrollbar-track-piece {
  margin-right: 10px;
  height: 8px;
  width: 8px;
}

::-webkit-scrollbar-corner {
  display: none;
}

.mapboxgl-compare {
  background-color:#fff;
  position:absolute;
  width:2px;
  height:100%;
  z-index:1;
}
/* ... */

